crates/cuda-device/tests/compile_fail/thread_coord_2d_u32_not_copy.stderr
error[E0382]: borrow of moved value: `coord`
  --> tests/compile_fail/thread_coord_2d_u32_not_copy.rs:13:13
   |
11 |     let coord = __internal::coord_2d_u32(launch_context);
   |         ----- move occurs because `coord` has type `ThreadCoord2D32<'_>`, which does not implement the `Copy` trait
12 |     let _moved = coord;
   |                  ----- value moved here
13 |     let _ = coord.row();
   |             ^^^^^ value borrowed here after move
